--- a/web-client/src/app.css
+++ b/web-client/src/app.css
@@ -25,14 +25,15 @@
 
 html {
   font-size: 62.5%;
-  background-color: white;
+ 
   font-family: 'MonumentRegular', sans-serif;
 }
 
 body {
-  max-width: 500px;
+  
   margin: 0 auto; /* Centra el contenido en la página */
   padding: 1rem;
   background-color: var(--mainBg-color);
   height: 100vh;
+  width: 100vw;
 }
